--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -34,6 +34,9 @@ jobs:
     - name: Build
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
     
+    - name: Rename
+      run: |
+        mv build/*.so build/imgui-fps-hud-${{format('android-{0}', matrix.abi)}}.so
     - uses: actions/upload-artifact@v4
       with:
         name: mcpelauncher-imgui-fps-hud-${{format('android-{0}', matrix.abi)}}
